correcting colors and alignments

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,5 +1,5 @@
 .dose-form {
-  text-align: left;
+  text-align: left !important;
   width: 90%;
 }
 
